--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
     <title>User inscription</title>
   </head>
   <body>
-    <form action="/login" method="GET">
+    <form action="/login" method="Post">
       id: <input type="text" name="UserName" /><br />
       psw: <input type="password" name="Password" />
       <input type="submit" value="ok" />
